--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   to contribute and grow</p>
             </div>
             <div class="about-img">
-                <img src="C:\Users\USER\Desktop\Portfolio\images\Anuska2.jpg" />
+                <img src="Anuska2.jpg" />
             </div>
         </div>
     </section>
@@ -58,7 +58,7 @@
         <div class="food-container container">
             <div class="food-type fruite">
                 <div class="img-container">
-                    <img src="C:\Users\USER\Desktop\Portfolio\images\cab-booking.png" />
+                    <img src="cab-booking.png" />
                     <div class="img-content">
                         <h3>Car Rental</h3>
                         <a href="https://www.uber.com" class="view-button" target="blank">View
@@ -69,7 +69,7 @@
             </div>
             <div class="food-type vegetable">
                 <div class="img-container">
-                    <img src="C:\Users\USER\Desktop\Portfolio\images\stock.png"  />
+                    <img src="stock.png"  />
                     <div class="img-content">
                         <h3>Stock Prediction</h3>
                         <a href="https://www.groww.com/" class="view-button" target="blank">View
@@ -79,7 +79,7 @@
             </div>
             <div class="food-type grin">
                 <div class="img-container">
-                    <img src="C:\Users\USER\Desktop\Portfolio\images\YouTube-Play-Button-PNG-Photos.png" alt="error" />
+                    <img src="YouTube-Play-Button-PNG-Photos.png" alt="error" />
                     <div class="img-content">
                         <h3>Youtube Summarizer</h3>
                         <a href="https://www.youtube.com" class="view-button" target="blank">View
@@ -94,7 +94,7 @@
         <div class="food-menu-container container">
             <div class="food-menu-item">
                 <div class="food-img">
-                    <img src="images/clg.jpg" />
+                    <img src="clg.jpg" />
 </div>
                 <div class="food-description">
                     <h2 class="food-titile">B.P. Poddar Institute of Management and Technology</h2>
@@ -109,7 +109,7 @@
 
             <div class="food-menu-item">
                 <div class="food-img">
-                    <img src="C:\Users\USER\Desktop\Portfolio\images\school.jpeg"  />
+                    <img src="school.jpeg"  />
                 </div>
                 <div class="food-description">
                     <h2 class="food-titile"> Kendriya    Vidyalaya   No.2   Ishapore</h2>
@@ -123,7 +123,7 @@
             </div>
             <div class="food-menu-item">
                 <div class="food-img">
-                    <img src="C:\Users\USER\Desktop\Portfolio\images\school.jpeg" />
+                    <img src="school.jpeg" />
                 </div>
                 <div class="food-description">
                     <h2 class="food-titile">Kendriya   Vidyalaya   No.2   Ishapore</h2>
@@ -152,7 +152,7 @@
     <section id="contact">
         <div class="contact-container container">
             <div class="contact-img">
-                <img src="images/Anuska3.jpg" alt="" />
+                <img src="Anuska3.jpg" alt="" />
             </div>
 
             <div class="form-container">
