--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css" />
+	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
 </head>
 
 <body>
@@ -23,7 +25,7 @@
 <ul class="menu-items">
                 <li><a href="#home">HOME</a></li>
                 <li><a href="#about">ABOUT</a></li>
-                <li><a href="#food">PROJCTS</a></li>
+                <li><a href="#food">PROJECTS</a></li>
                 <li><a href="#food-menu">EDUCATION</a></li>
                 <li><a href="#testimonials">SKILLS</a></li>
                 <li><a href="#contact">CONTACT</a></li>
@@ -165,10 +167,32 @@
         </div>
     </section>
     <footer id="footer">
-	<h2>Copyright &copy; 2025 by <span class="skill-heading">Anuska Dutta</span>. All rights reserved</h2>
-
-
+        <div class="social-links">
+            <a href="mailto:anuskadutta2002@gmail.com" target="_blank">
+                <i class="fas fa-envelope"></i> <!-- Gmail icon -->
+            </a>
+            <a href="https://www.instagram.com/_anuscaa" target="_blank">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://www.facebook.com/anuska.dutta.522" target="_blank">
+                <i class="fab fa-facebook"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/anuska-dutta-2263ab1b8/" target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://www.hackerrank.com/anuskadutta2002" target="_blank">
+                <i class="fab fa-hackerrank"></i>
+            </a>
+            <a href="https://github.com/anuscaa" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+        </div>
+    
+        <p class="copyright">
+            Copyright &copy; 2025 by <span class="skill-heading">Anuska Dutta</span>. All rights reserved.
+        </p>
     </footer>
+    
     <!-- .................../ JS Code for smooth scrolling /...................... -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
