--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <img src="cab-booking.png" />
                     <div class="img-content">
                         <h3>Car Rental</h3>
-                        <a href="https://www.uber.com" class="view-button" target="blank">View
+                        <a href="https://github.com/anuscaa/crs.git" class="view-button" target="blank">View
                           </a>
                           
                     </div>
@@ -84,7 +84,7 @@
                     <img src="YouTube-Play-Button-PNG-Photos.png" alt="error" />
                     <div class="img-content">
                         <h3>Youtube Summarizer</h3>
-                        <a href="https://www.youtube.com" class="view-button" target="blank">View
+                        <a href="https://github.com/anuscaa/Youtube-transcript-summarizer.git" class="view-button" target="blank">View
                             </a>
                     </div>
                 </div>
