--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <img src="stock.png"  />
                     <div class="img-content">
                         <h3>Stock Prediction</h3>
-                        <a href="https://www.groww.com/" class="view-button" target="blank">View
+                        <a href="https://github.com/anuscaa/Vizualizing-forecasting-stocks.git" class="view-button" target="blank">View
                             </a>
 </div>
                 </div>
