--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <ul class="menu-items">
                 <li><a href="#home">HOME</a></li>
                 <li><a href="#about">ABOUT</a></li>
-                <li><a href="#food">PROJCTS</a></li>
+                <li><a href="#food">PROJECTS</a></li>
                 <li><a href="#food-menu">EDUCATION</a></li>
                 <li><a href="#testimonials">SKILLS</a></li>
                 <li><a href="#contact">CONTACT</a></li>
